Initial commit for problem

--- a/static/templates/game.html
+++ b/static/templates/game.html
@@ -1,7 +1,9 @@
 <div ng-controller="GameCtrl">
-  <img ng-src="{{ item.url }}" />
+  <!-- TODO: fill in any angular tags and make buttons work -->
+  <img ng-src="" />
   <br>
+
   <input type="text" ng-model="guess"></input>
-  <button ng-click="guessPrice(guess)">Guess</button>
-  <button ng-click="getRandomItemAsynch()">New item</button>
+  <button>Guess</button>
+  <button>New item</button>
 </div>
